# algokit-subscriber-ts

./: .env.sample  .eslintignore  .eslintrc  .gitignore  .nsprc  .prettierignore  README.md  algorandfoundation-algokit-subscriber-1.0.1.tgz  algorandfoundation-algokit-subscriber-1.0.2.tgz  docs-config.json  eslint.config.mjs  index.ts  jest.config.ts  package-lock.json  package.json  rollup.config.ts  tsconfig.build.json  tsconfig.cjs.json  tsconfig.dev.json  tsconfig.esm.json  tsconfig.json  typedoc.html.json  typedoc.json  typedoc.markdown.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build-docs.yml  devportal-publish-docs.yml  docs.yml  gh-pages.yml  merge_main.yml  pr.yml  prod_release.yml  publish_docs.yml  pull_request.yml  release.yml
dist-docs/api/: README.md
dist-docs/api/interfaces/: types_subscription.BeforePollMetadata.md  types_subscription.BlockUpgradeState.md  types_subscription.BlockUpgradeVote.md
dist-docs/api/modules/: types_arc_28.md
docs/: README.md  hierarchy.html  index.md  modules.html  subscriber.md  subscriptions.md  v2-migration.md  v3-migration.md
docs/_html/: hierarchy.html  index.html  modules.html
docs/_html/assets/: hierarchy.js  highlight.css  navigation.js  search.js
docs/_html/classes/: index.AlgorandSubscriber.html  types_async-event-emitter.AsyncEventEmitter.html  types_subscription.SubscribedTransaction.html
docs/_html/documents/: README.html  subscriber.html  subscriptions.html  v3-migration.html
docs/_html/enums/: types_subscription.BalanceChangeRole.html
docs/_html/functions/: index.getSubscribedTransactions.html
docs/_html/interfaces/: types_arc-28.Arc28Event.html  types_arc-28.Arc28EventGroup.html  types_arc-28.Arc28EventToProcess.html  types_arc-28.EmittedArc28Event.html  types_block.TransactionInBlock.html  (+15 more)
docs/api/: README.md  modules.md
docs/assets/: highlight.css  navigation.js  search.js
docs/code/: README.md  hierarchy.md  modules.md
docs/guides/: README.md  subscriber.md
docs/media/: index.html
docs/variables/: export_.html
examples/bug/: index.ts
examples/data-history-museum/: index.ts
examples/data-history-museum-with-ownership/: index.ts
examples/usdc/: index.ts
examples/xgov-voting/: index.ts
functions/: block.ts  subscriptions.ts
src/: async-event-emitter.ts  block.ts  dynamic-subscriber.ts  index.ts  subscriber.ts  subscriptions.ts  transform.ts  utils.ts
src/types/: arc-28.ts  async-event-emitter.ts  block.ts  index.ts  subscription.ts
tests/: accounts.ts  filterFixture.ts  fixture.ts  subscribed-transactions.ts  testing-app.ts  transactions.ts  wait.ts  watermarks.ts
tests/contract/: .gitignore  build.py  client.ts  contract.py  contract.ts  pyproject.toml
tests/contract/testing_app/: contract.py
tests/scenarios/: app-call-transactions.spec.ts  balance-changes.spec.ts  catchup-with-indexer.spec.ts  dynamic-subscriber.spec.ts  events.spec.ts  fail.spec.ts  filters.spec.ts  inner_transactions.spec.ts  multiple-filters.spec.ts  multiple-filters.ts  skip-sync-newest.spec.ts  skip-to-newest.spec.ts  subscriber.spec.ts  sync-oldest-start-now.spec.ts  sync-oldest.spec.ts  transform-appl-config-txn.spec.ts  transform-appl-create-txn.spec.ts  transform-appl-txn.spec.ts  transform-asset-config-txn.spec.ts  transform-complex-txn.spec.ts  transform-heartbeat-txn.spec.ts  transform-keyreg.spec.ts  transform-pay-txn.spec.ts  transform-stpf.spec.ts
tests/testAccounts/: accounts-addrs.ts  accounts-sks-0.ts  accounts-sks-1.ts  accounts-sks-2.ts  accounts-sks-3.ts  accounts-sks-4.ts  accounts-sks-5.ts  accounts-sks-6.ts  accounts-sks-7.ts  accounts-sks-8.ts  accounts-sks-9.ts
(+157 files in other folders)
